# QuadrupedRobot2023

./: .gitignore  CMakeLists.txt  README.md
log/: ellipseTrajectoryTest--2023-10-27--22-40-38--log_0.txt  ellipseTrajectoryTest--2023-11-06--19-45-24--log_0.txt  ellipseTrajectoryTest--2023-11-06--20-08-27--log_0.txt  ellipseTrajectoryTest--2023-11-06--20-08-45--log_0.txt  ellipseTrajectoryTest--2023-11-06--21-08-28--log_0.txt  ellipseTrajectoryTest--2023-11-06--21-11-33--log_0.txt  ellipseTrajectoryTest--2023-11-06--21-53-10--log_0.txt  ellipseTrajectoryTest--2023-11-06--21-53-44--log_0.txt  ellipseTrajectoryTest--2023-11-06--21-55-47--log_0.txt  ellipseTrajectoryTest--2023-11-06--21-55-57--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-11-10--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-12-16--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-13-13--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-13-35--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-18-01--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-20-41--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-21-01--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-26-59--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-28-22--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-29-01--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-36-06--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-37-32--log_0.txt  ellipseTrajectoryTest--2023-11-06--22-37-39--log_0.txt  singleLeg--2023-10-14--17-00-11--log_0.txt  singleLeg--2023-10-14--17-21-32--log_0.txt
src/: cplan  cplan.cpp  cplan.h  main.cpp  model.cpp  model.h  plan.cpp  (+7 more)
(+19 files in other folders)
